navbar logo bugs
fix the bug that logo with link has extra space that is clickable

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,13 @@
+.logo-image {
+    
+    display: inline-block !important;
+    max-width:15em;
+    width: auto;
+    margin-left: 10%;
+}
+
 .logo-image img {
-    height: 45%;
-    width: 45%;
-    margin-left: 20%;
-    margin-top: 0.75rem;
+    width:100%;
 }
 
 .navbar-container {
@@ -44,7 +49,7 @@
     height: 0.1em;
     background:rgb(0, 0, 0);
     transform: translateY(-0.2em);
-    transition: 0.5s;
+    transition: 0.4s;
 }
 
 .toogle::after{
@@ -54,7 +59,7 @@
     height: 0.1em;
     background:#000;
     transform: translateY(0.2em);
-    transition: 0.5s;
+    transition: 0.4s;
 }
 
 .toogle.active::before{
@@ -200,11 +205,13 @@
 }
 
 @media only screen and (max-width: 860px) {
-    .logo-image img {
-        height: 19%;
-        width: 19%;
-        margin-left: 5%;
-        margin-top: 0.5rem;
+
+    .logo-image {
+    
+        display: inline-block !important;
+        max-width:7em;
+        width: auto;
+        margin-left: 10%;
     }
 
     .menu-icon {
